# rust-nds-template

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  nds.json
.cargo/: config.toml
assets/: Makefile  ferris.grit
nitrofiles/: README
src/: ferris.grit  ferris.png.s  ferris.s  main.rs
