[package]
name = "rust-nds-template"
version = "0.0.1"
authors = ["Your Name Here <no-reply@example.com>"]
edition = "2021"

[profile.release]
lto = "fat"

[profile.dev]
lto = false
opt-level = 1

[dependencies]
nds-rt = { path = "../nds-rs/nds-rt" }
nds-rs = { path = "../nds-rs/nds-rs", default-features = true }
nds-proc-macros = { path = "../nds-rs/nds-proc-macros" }
embedded-graphics = "0.8.1"
embedded-canvas = { version = "0.3.1", default-features = false, features = ["alloc"] }


[build-dependencies]
cc = "1.0"