[package]
name = "rust-nds-template"
version = "0.0.1"
authors = ["Your Name Here <no-reply@example.com>"]
edition = "2021"

[profile.release]
lto = "fat"

[profile.dev]
lto = false
opt-level = 1

[dependencies]
nds-rs = { git = "https://github.com/BlueTheDuck/nds-rs.git" }
embedded-graphics = "0.8.1"
embedded-canvas = { version = "0.3.1", default-features = false, features = ["alloc"] }


[build-dependencies]
cc = "1.0"

[package.metadata.ndstool]
icon = "icon.png"
title = ["Game Title", "Subtitle", "Maker"]
nitrofiles = "nitrofiles"
